--- a/pages/index.html
+++ b/pages/index.html
@@ -9,8 +9,8 @@
     <a href="tools/md-to-mysql-ddl.html">markdown 转 mysql</a><br>
     <a href="tools/md-to-json-schema.html">markdown 转 json schema</a><br>
     <a href="tools/md-to-java.html">markdown 转 Java</a><br>
-    <a href="tools/json2java.html">JSON 数据转 Java</a><br>
-    <a href="tools/jsonschema2java.html">JSON schema 转 Java</a><br>
+    <a href="tools/json-to-java.html">JSON 数据转 Java</a><br>
+    <a href="tools/json-schema-to-java.html">JSON schema 转 Java</a><br>
 </div>
 </body>
 </html>
