--- a/pages/tools/md-to-mysql-ddl.html
+++ b/pages/tools/md-to-mysql-ddl.html
@@ -135,6 +135,9 @@ convert markdown to mysql ddl<br>
             if (!f.null) {
                 s += " not null"
             }
+            if (f.name === "id") {
+                s += " primary key"
+            }
             if (f.description) {
                 s += " comment '" + f.description + "'";
             }
