--- a/pages/index.html
+++ b/pages/index.html
@@ -7,6 +7,7 @@
 <body>
 <div style="text-align: center">
     <a href="tools/md-to-mysql-ddl.html">markdown 转 mysql</a><br>
+    <a href="tools/md-to-java-do.html">markdown 转 Java DO</a><br>
     <a href="tools/md-to-json-schema.html">markdown 转 json schema</a><br>
     <a href="tools/md-to-java.html">markdown 转 Java</a><br>
     <a href="tools/json-to-java.html">JSON 数据转 Java</a><br>
