add json uglify

--- a/pages/index.html
+++ b/pages/index.html
@@ -12,6 +12,7 @@
     <a href="tools/md-to-java.html">markdown 转 Java</a><br>
     <a href="tools/json-to-java.html">JSON 数据转 Java</a><br>
     <a href="tools/json-schema-to-java.html">JSON schema 转 Java</a><br>
+    <a href="tools/json-uglify.html">JSON压缩</a><br>
 </div>
 </body>
 </html>
